--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,27 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - Task3",
+            "request": "launch",
+            "mainClass": "tp_note_1.Task3",
+            "projectName": "tp_note_1"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - Task2",
+            "request": "launch",
+            "mainClass": "Task2",
+            "projectName": "tp_note_1"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - Sample",
+            "request": "launch",
+            "mainClass": "tp_note_1.Sample",
+            "projectName": "tp_note_1"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - Task1",
             "request": "launch",
             "mainClass": "tp_note_1.Task1",
